[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/memorization_module/stop.png" type="Texture" id=1]
[ext_resource path="res://assets/memorization_module/black_cancel.png" type="Texture" id=2]
[ext_resource path="res://assets/memorization_module/talking.png" type="Texture" id=4]
[ext_resource path="res://assets/memorization_module/red_cancel.png" type="Texture" id=5]
[ext_resource path="res://src/memorization/testing/Control.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/fonts/arabic_font.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://addons/arabic-text/ALabel.gd" type="Script" id=10]
[ext_resource path="res://assets/ui/red_cancel.png" type="Texture" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 1 )
VScrollBar/styles/grabber_highlight = SubResource( 2 )
VScrollBar/styles/grabber_pressed = SubResource( 3 )
VScrollBar/styles/scroll = SubResource( 4 )
VScrollBar/styles/scroll_focus = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 70
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.943848
margin_bottom = 0.943848
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.529412, 0.952941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="without_diacritics_HTTPRequest" type="HTTPRequest" parent="."]

[node name="with_diacritics_HTTPRequest" type="HTTPRequest" parent="."]

[node name="api_text" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -474.0
margin_top = -169.0
margin_right = 474.0
margin_bottom = 127.0
theme = SubResource( 6 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="api_text"]
margin_right = 948.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 7 )
text = " "
align = 2
autowrap = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
arabic_input = " "

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -143.0
margin_top = 16.0181
margin_right = 143.0
margin_bottom = 75.0181
custom_fonts/font = SubResource( 9 )
text = "Surah:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="verse" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -143.0
margin_top = 79.9384
margin_right = 41.0
margin_bottom = 116.938
custom_fonts/font = SubResource( 10 )
text = "Verse: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="get_timer" type="Timer" parent="."]

[node name="stt_buttons" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_speaking_button" type="TouchScreenButton" parent="stt_buttons"]
position = Vector2( -31.9197, 167.981 )
scale = Vector2( 0.256478, 0.256478 )
normal = ExtResource( 4 )

[node name="stop_speaking_button" type="TouchScreenButton" parent="stt_buttons"]
visible = false
position = Vector2( -195.21, 167.981 )
scale = Vector2( 0.256, 0.256 )
normal = ExtResource( 1 )

[node name="error_overlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.145098, 0.698039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="output" type="ColorRect" parent="error_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.5
margin_top = -140.5
margin_right = 201.5
margin_bottom = 140.5
color = Color( 0.929412, 0.211765, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg" type="Label" parent="error_overlay/output"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -30.0
margin_right = 109.0
margin_bottom = 30.0
theme = SubResource( 12 )
text = "Try Again"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_cancel_button" type="TouchScreenButton" parent="error_overlay/output"]
position = Vector2( 338.919, -28.9781 )
scale = Vector2( 0.175638, 0.175638 )
normal = ExtResource( 2 )

[node name="success_overlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.145098, 0.698039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="output" type="ColorRect" parent="success_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.76
margin_top = -140.5
margin_right = 200.24
margin_bottom = 140.5
color = Color( 0.211765, 0.819608, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg" type="Label" parent="success_overlay/output"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -29.5
margin_right = 148.5
margin_bottom = 29.5
theme = SubResource( 12 )
text = "GOOD JOB !!"
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="success_cancel_button" type="TouchScreenButton" parent="success_overlay/output"]
position = Vector2( 341.439, -28.9782 )
scale = Vector2( 0.176, 0.176 )
normal = ExtResource( 5 )

[node name="loading" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.145098, 0.698039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="output" type="ColorRect" parent="loading"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.5
margin_top = -140.5
margin_right = 201.5
margin_bottom = 140.5
color = Color( 0.980392, 0.921569, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg" type="Label" parent="loading/output"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -32.0
margin_right = 138.0
margin_bottom = 32.0
theme = SubResource( 12 )
text = "Loading....."
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_button" type="TouchScreenButton" parent="exit"]
position = Vector2( 8.9797, 10.1022 )
scale = Vector2( 0.158154, 0.158154 )
normal = ExtResource( 11 )
[connection signal="request_completed" from="without_diacritics_HTTPRequest" to="." method="_on_without_diacritics_HTTPRequest_request_completed"]
[connection signal="request_completed" from="with_diacritics_HTTPRequest" to="." method="_on_with_diacritics_HTTPRequest_request_completed"]
[connection signal="timeout" from="get_timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="stt_buttons/start_speaking_button" to="." method="_on_start_speaking_button_pressed"]
[connection signal="pressed" from="stt_buttons/stop_speaking_button" to="." method="_on_stop_speaking_button_pressed"]
[connection signal="pressed" from="error_overlay/output/error_cancel_button" to="." method="_on_error_cancel_button_pressed"]
[connection signal="pressed" from="success_overlay/output/success_cancel_button" to="." method="_on_success_cancel_button_pressed"]
[connection signal="pressed" from="exit/exit_button" to="." method="_on_exit_button_pressed"]
